force-app/main/default/objects/SkinPen_Microneedling__c/SkinPen_Microneedling__c.object-meta.xml
<CustomObject>
    <label>SkinPen Microneedling</label>
    <nameField>
        <label>SkinPen Microneedling Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SkinPen Microneedlings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>