force-app/main/default/objects/SkinPen_Microneedling__c/fields/Chart__c.field-meta.xml
<CustomField>
    <fullName>Chart__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Chart</label>
    <referenceTo>Chart__c</referenceTo>
    <relationshipLabel>SkinPen Microneedlings</relationshipLabel>
    <relationshipName>SkinPen_Microneedlings</relationshipName>
    <type>Lookup</type>
</CustomField>