force-app/main/default/objects/SkinPen_Microneedling__c/fields/Post_care_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Post_care_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post care reviewed</label>
    <type>Checkbox</type>
</CustomField>