force-app/main/default/objects/SkinPen_Microneedling__c/fields/Pre_Care_reviewed__c.field-meta.xml
<CustomField>
    <fullName>Pre_Care_reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pre Care reviewed</label>
    <type>Checkbox</type>
</CustomField>