force-app/main/default/objects/SkinPen_Microneedling__c/fields/Procedure_depth__c.field-meta.xml
<CustomField>
    <fullName>Procedure_depth__c</fullName>
    <label>Procedure depth</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>.25</fullName>
            </value>
            <value>
                <fullName>.5</fullName>
            </value>
            <value>
                <fullName>.75</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>1.25</fullName>
            </value>
            <value>
                <fullName>1.5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>