force-app/main/default/objects/SkinPen_Microneedling__c/fields/tx__c.field-meta.xml
<CustomField>
    <fullName>tx__c</fullName>
    <label>tx #</label>
    <length>255</length>
    <type>Text</type>
</CustomField>